--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,33 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "(gdb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/main",  // Path to your executable
+            "args": ["0.5", "50", "er"],          // Arguments passed to the program
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "build", // Adjust this if necessary
+            "miDebuggerPath": "/usr/bin/gdb", // Path to GDB, adjust as needed
+            "targetArchitecture": "x86_64",
+            "logging": {
+                "trace": true,
+                "engineLogging": false,
+                "traceResponse": true
+            }
+        }
+    ]
 }
